--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
     <link href="https://acdevs.github.io/fontawesome/css/fontawesome.css" rel="stylesheet">
     <link href="https://acdevs.github.io/fontawesome/css/all.css" rel="stylesheet">
-    <title>Nikhil Agarwal</title>
+    <title>Jeetu Mishra</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript.</noscript>
